fix paddings in cart page and z-index for header

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -11,7 +11,7 @@
   box-sizing: border-box;
   border-bottom: 1px solid $elements;
   background-color: $white;
-  z-index: 100;
+  z-index: 3;
 
   @include on-desktop {
     height: 64px;
